# insane

./: .gitignore  CMakeLists.txt  CreateBuildFiles.bat  Readme.MD
.github/workflows/: main.yml
src/: NamingConvention.txt  main.cpp
src/Features/Aimbot/: AimbotHelper.cpp  AimbotHelper.h
src/Features/Aimbot/Aimbot Melee/: AimbotMelee.cpp
src/Features/Aimbot/Aimbot Projectile/: AimbotProjectile.cpp  AimbotProjectile.h
src/Features/Aimbot/AimbotHitscanV2/: AimbotHitscanV2.cpp
src/Features/BulletTracers/: BulletTarcers_t.cpp
src/Features/CritHack/: CritHack.cpp
src/Features/DMEHandler/: DMEHandler.cpp  DMEHandler.h
src/Features/ESP/: ESPV2.cpp
src/Features/Entity Iterator/: EntityIterator.cpp  EntityIterator.h
src/Features/Glow/: Glow.cpp  Glow.h
src/Features/Graphics Engine V2/Draw Objects/Box/: Box.cpp
src/Features/Graphics Engine V2/Draw Objects/Circle/: Circle.cpp
src/Features/Graphics Engine V2/Draw Objects/Cube/: Cube.cpp
src/Features/Graphics Engine/Draw Objects/: DrawObj.cpp
src/Features/Graphics Engine/Graphics Engine/: GraphicsEngine.cpp
src/Features/ImGui/MenuV2/: MenuV2.cpp  MenuV2.h
src/Features/ImGui/NotificationSystem/: NotificationSystem.cpp
src/Features/Material Gen/: MaterialGen.cpp  MaterialGen.h
src/Features/ModelPreview/: ModelPreview.cpp
src/Features/Movement/: Movement.cpp  Movement.h
src/Features/MovementSimulation/: MovementSimulation.cpp
src/Features/NoSpread/: NoSpreadV2.cpp
src/Features/Projectile Engine/: ProjectileEngine.cpp
src/Features/Tick Shifting/: TickShifting.cpp
src/Features/TickManip/: TickManipHelper.cpp  TickManipHelper.h
src/Features/TickManip/AntiAim/: AntiAimV2.cpp  AntiAimV2.h
src/Hooks/: CBaseAnimating_SetupBones.cpp  CGlowObjectManager_ApplyEntityGlowEffects.cpp  CL_Move.cpp  CreateMove.cpp  FX_FireBullets.cpp
src/Hooks/EndScene/: EndScene helper functions.cpp  EndScene.h
src/Hooks/WinProc/: WinProc.cpp  WinProc.h
src/SDK/TF object manager/: TFOjectManager.h
src/SDK/class/: BaseEntity.cpp  BaseEntity.h  Basic Structures.cpp  GlowManager.h  IMatRenderContext.h  IMaterial.h  IMaterialSystem.h  IMaterialVar.h  IStudioRender.h  ITexture.h  IVDebugOverlay.cpp
src/Threads/: thread1.cpp  thread1.h
src/Utility/ClassIDHandler/: ClassIDHandler.cpp  ClassIDHandler.h
src/Utility/Profiler/: Profiler.cpp  Profiler.h
